welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Anub = Bnub ) { 
                 ^close10:11: error: type mismatch;
 found   : Boolean(false)
 required: Int
	}else { return false }
                       ^